# PyFunctional

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis-install.sh  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEVELOPER.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  _config.yml  functional.py  generate-site.sh  index.html  index.md  params.json  pylintrc  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py  tox.ini  travis.sh
.github/: stale.yml
.github/workflows/: pythonpackage.yml
docs/: Makefile  conf.py  developer.rst  functional.rst  index.md  index.rst  make.bat  modules.rst
examples/: PyFunctional-pandas-tutorial.ipynb  camping_purchases.csv  chat_logs.jsonl  gear_list.txt  users.json
functional/: __init__.py  chain.py  conftest.py  execution.py  io.py  lineage.py  pipeline.py  pipeline2.py  streams.py  transformations.py  util.py
functional/test/: test_functional.py  test_io.py  test_streams.py  test_type.py  test_util.py
functional/test/data/: test.csv  test.csv.bz2  test.csv.xz  test.jsonl  test.jsonl.bz2  test.jsonl.xz  test.txt  test.txt.bz2  test.txt.xz  test_dict.json  test_dict.json.bz2  test_dict.json.xz  test_list.json.bz2  test_list.json.xz  test_sqlite3.db
jekyll-site/: index.md
jekyll-site/_layouts/: index.html
test/: test_functional.py
test/functional/: test_chain.py
