[tool.poetry]
name = "PyFunctional"
version = "1.4.3"
description = "Package for creating data pipelines with chain functional programming"
authors = ["Pedro Rodriguez <me@pedro.ai>"]
maintainers = ["Pedro Rodriguez <me@pedro.ai>"]
readme = "README.md"
homepage = "https://github.com/EntilZha/PyFunctional"
repository = "https://github.com/EntilZha/PyFunctional"
documentation = "https://docs.pyfunctional.org/en/master/"
keywords = ["functional", "pipeline", "chain"]
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
packages = [
    { include = "functional" }
]

[tool.poetry.dependencies]
python = "^3.6,>=3.6.1"
dill = ">=0.2.5"
tabulate = "<=1.0.0"
pandas = {version = "^1.0.3", optional = true}

[tool.poetry.extras]
all = ["pandas"]

[tool.poetry.dev-dependencies]
pypandoc = "^1.5"
black = "^19.10b0"
pytest = "^5.4.1"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"
coverage = "<5.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
